Added challenge 03 to Projects

--- a/08-Projects/HTML/project02.html
+++ b/08-Projects/HTML/project02.html
@@ -63,9 +63,9 @@
 -->
 
 <head>
-    <link rel="stylesheet" href="project02.css">
+    <link rel="stylesheet" href="CSS/project02.css">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script src="project01.js"></script>
+    <script src="JS/project02.js"></script>
 </head>
 
 <h1 id="title">Survey Form</h1>
