--- a/08-Projects/HTML/project01.html
+++ b/08-Projects/HTML/project01.html
@@ -56,9 +56,9 @@
 -->
 
 <head>
-    <link rel="stylesheet" href="project01.css">
+    <link rel="stylesheet" href="CSS/project01.css">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script src="project01.js"></script>
+    <script src="JS/project01.js"></script>
 </head>
 
 
